-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b138
-
solaris_11
TEST FAILED: Error processing option VMThreadStackSize with valid value '-XX:VMThreadStackSize=1'! JVM output reports a fatal error. JVM exited with code 6!
stdout content[#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0xffff80fb36fa57b0, pid=18357, tid=19
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-20151022232912.amurillo.jdk9-hs-2015-10--b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-20151022232912.amurillo.jdk9-hs-2015-10--b00, mixed mode, tiered, compressed oops, g1 gc, solaris-amd64)
# Problematic frame:
# V [libjvm.so+0x9a57b0] MachNode*State::MachNodeGenerator(int)+0x16030
#
# Core dump will be written. Default location: /export/local/aurora/sandbox/results/workDir/runtime/CommandLine/OptionsValidation/TestOptionsWithRanges/core or core.18357
#
# An error report file with more information is saved as:
# /export/local/aurora/sandbox/results/workDir/runtime/CommandLine/OptionsValidation/TestOptionsWithRanges/hs_err_pid18357.log
Java start-up!
[error occurred during error reporting , id 0xb]
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
]
stderr content[]
Running "java -XX:VMThreadStackSize=1" on the same host gave:
-bash-4.1$ ./java -XX:VMThreadStackSize=1
Segmentation Fault
-bash-4.1$ echo $?
139
hs_err_pid18357.log and replay_pid18357.log are attached.
Similar error occurred for -XX:CompilerThreadStackSize=1. See https://bugs.openjdk.java.net/browse/JDK-8140327
- blocks
-
JDK-8136766 Enable ThreadStackSize range test
-
- Resolved
-
- duplicates
-
JDK-8148169 Test runtime/CommandLine/OptionsValidation/TestOptionsWithRanges.java fails
-
- Closed
-
- relates to
-
JDK-8175342 assert(InstanceKlass::cast(k)->is_initialized()) failed: need to increase java_thread_min_stack_allowed calculation
-
- Closed
-
-
JDK-8274661 Use system default for stack sizes
-
- Closed
-
-
JDK-8161093 Solaris for >8k pagesize adds extra guard pages
-
- Closed
-
-
JDK-8136766 Enable ThreadStackSize range test
-
- Resolved
-
-
JDK-8140327 segfault on solaris-amd64 with "-XX:CompilerThreadStackSize=1" option
-
- Resolved
-
-
JDK-8169373 Work around linux NPTL stack guard error
-
- Resolved
-
-
JDK-8204478 VMThreadStackSize failing at max range
-
- Closed
-