hotspot/test/runtime/CommandLine/OptionsValidation/TestOptionsWithRanges.java
@@ -89,20 +89,6 @@ public class TestOptionsWithRanges {
         excludeTestMaxRange("CICompilerCount");
 
         /*
-         * JDK-8136766
-         * Temporarily remove ThreadStackSize from testing because Windows can set it to 0
-         * (for default OS size) but other platforms insist it must be greater than 0
-        */
-        excludeTestRange("ThreadStackSize");
-
-        /*
-         * Remove the flag controlling the size of the stack because the
-         * flag has direct influence on the physical memory usage of
-         * the VM.
-         */
-        allOptionsAsMap.remove("CompilerThreadStackSize");
-
-        /*
          * Exclude MallocMaxTestWords as it is expected to exit VM at small values (>=0)
          */
         excludeTestMinRange("MallocMaxTestWords");
@@ -124,6 +110,8 @@ public class TestOptionsWithRanges {
         excludeTestMaxRange("OldSize");
         excludeTestMaxRange("ParallelGCThreads");
 
+        excludeTestMaxRange("CompilerThreadStackSize");
+        excludeTestMaxRange("ThreadStackSize");
         excludeTestMaxRange("VMThreadStackSize");
 
         /*
